# SentrixSim

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_report.md  benchmark_results_v0.1.json  data.py  run_benchmark.py
benchmarks_v0.2/: benchmark_report.md  benchmark_results.json
configs/: parameters.yaml  scene_default.yaml  scene_hard.yaml  topology_layoutB.yaml
configs/events/: grasp.yaml  hold.yaml  idle.yaml  pinch.yaml  press.yaml  release.yaml  shear.yaml  slip.yaml  tap.yaml
dataset_v0.1/: dataset_v0.1_report.md  manifest.json  stats.json  validation.json
dataset_v0.1/lerobot/meta/: episodes.jsonl  info.json
dataset_v0.1/mcap/grasp/: grasp__d0_n0_r0.mcap  grasp__d0_n0_r1.mcap  grasp__d0_n0_r2.mcap  grasp__d0_n0_r3.mcap  grasp__d0_n1_r0.mcap  grasp__d0_n1_r1.mcap  grasp__d0_n1_r2.mcap  grasp__d0_n1_r3.mcap  grasp__d0_n2_r0.mcap  grasp__d0_n2_r1.mcap  grasp__d0_n2_r2.mcap  grasp__d0_n2_r3.mcap  grasp__d0_n3_r0.mcap  grasp__d0_n3_r1.mcap  grasp__d0_n3_r2.mcap  grasp__d0_n3_r3.mcap  grasp__d0_n4_r0.mcap  grasp__d0_n4_r1.mcap  grasp__d0_n4_r2.mcap  grasp__d0_n4_r3.mcap  grasp__d1_n0_r0.mcap  (+79 more)
dataset_v0.2/: dataset_v0.2_report.md  manifest.json  stats.json
docs/: ASSUMPTIONS.md  DATASET_GENERATION_GUIDE.md  HARDMODE_failure_modes.md
out_all/grasp/: grasp.mcap  grasp.parquet
out_all/hold/: hold.mcap  hold.parquet
out_all/idle/: idle.mcap  idle.parquet
out_all/pinch/: pinch.mcap  pinch.parquet
out_all/press/: press.mcap  press.parquet
out_all/release/: release.mcap  release.parquet
out_all/shear/: shear.mcap  shear.parquet
out_all/slip/: slip.mcap  slip.parquet
out_all/tap/: tap.mcap  tap.parquet
out_ph/: press.parquet
src/sentrixsim/: __init__.py  cli.py  core_types.py  dataset.py  decode.py  hardmode.py  pipeline.py  topology.py
tests/: conftest.py  test_pipeline_and_export.py  test_registry.py  test_sensor_models.py
(+3548 files in other folders)
