[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentrixsim"
version = "0.1.0"
description = "SentrixSim v1 - forward-model simulator for the Sentrix Mark 2 visuotactile glove"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sentrix Tactile Sensing" }]
license = { text = "Proprietary - Internal Engineering" }
dependencies = [
    "sentrix-contracts>=0.1.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "pyarrow>=14",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "mcap>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
sentrixsim = "sentrixsim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sentrixsim = ["../configs/*.yaml", "../configs/events/*.yaml"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
filterwarnings = ["default"]
